--- a/hyperblog/blogpost.html
+++ b/hyperblog/blogpost.html
@@ -1,4 +1,6 @@
+<!DOCTYPE html>
 <html>
+    <meta charset="UTF-8">
     <head>
         <title>Bienvenidos a Hyperblog 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -13,6 +15,9 @@
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas incréibles que se pueden hacer con ramas</p>
                 <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
                 <p>Suscribete y dale like, tengo hambre</p>
+            </div>
+            <div id="footer">
+                Hecho con amor en Platzi ❤️
             </div>
         </div>
     </body>
