Contribución a un proyecto ajeno

--- a/hyperblog/blogpost.html
+++ b/hyperblog/blogpost.html
@@ -19,7 +19,7 @@
                 <p>Suscribete y dale like</p>
             </div>
             <div id="footer">
-                Hecho con amor en Platzi ❤️
+                Hecho con amor en Platzi y VIM ❤️
             </div>
         </div>
     </body>
